
- **Removed** ``morepath.enable_implicit`` and
  ``morepath.disable_implicit`` are both removed from the Morepath API.

  You no longer need to choose between implicit or explicit lookup for
  generic functions, as the generic functions that are part of the API
  have all been removed.  Generic functions decorated by
  ``morepath.App.function`` can use implicit lookup by default.



0.15 (2016-07-18)
=================

Removal & Deprecations
----------------------

- **Removed**: ``morepath.autosetup`` and ``morepath.autocommit`` are
  both removed from the Morepath API.

  Use ``autoscan``. Also use new explicit ``App.commit`` method, or
  rely on Morepath automatically committing during the first
  request. So instead of::

    morepath.autosetup()
    morepath.run(App())

  you do::

    morepath.autoscan()
    App.commit()  # optional
    morepath.run(App())

- **Removed**: the ``morepath.security`` module is removed, and you cannot
  import from it anymore. Change imports from it to the public API, so go
  from::

    from morepath.security import NO_IDENTITY

  to::

    from morepath import NO_IDENTITY

- **Deprecated** ``morepath.remember_identity`` and
  ``morepath.forget_identity`` are both deprecated.

  Use the ``morepath.App.remember_identity`` and
  ``morepath.App.forget_identity`` methods, respectively.

  Instead of ::

    remember_identity(response, request, identity, lookup=request.lookup)
    ...
    morepath.forget_identity(response, request, lookup=request.lookup)

  you do::

    request.app.remember_identity(response, request, identity)
    ...
    request.app.forget_identity(response, request)

- **Deprecated** ``morepath.settings`` is deprecated.

  Use the ``morepath.App.settings`` property instead.

- **Deprecated** ``morepath.enable_implicit`` and
  ``morepath.disable_implicit`` are both deprecated.

  You no longer need to choose between implicit or explicit lookup for