@@ -38,3 +38,15 @@ def bytes_(s, encoding='latin-1', errors='strict'):
     if isinstance(s, text_type):
         return s.encode(encoding, errors)
     return s
+
+
+# From Benjamin Peterson's six library
+def with_metaclass(meta, *bases):
+    """Create a base class with a metaclass."""
+    # This requires a bit of explanation: the basic idea is to make a
+    # dummy metaclass for one level of class instantiation that replaces
+    # itself with the actual metaclass.
+    class metaclass(type):
+        def __new__(cls, name, this_bases, attrs):
+            return meta(name, bases, attrs)
+    return type.__new__(metaclass, 'temporary_class', (), {})
